greeter/manifests/greeter-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: europe-central2-docker.pkg.dev/k8s-course-466712/course-repo/greeter:ar
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
spec:
  selector:
    app: greeter
    version: v2
  ports:
    - port: 80
      targetPort: 8080
