greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
spec:
  selector:
    app: greeter
  ports:
    - port: 80
      targetPort: 8080
