greeter/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: exercises-route
  namespace: exercises
spec:
  parentRefs:
    - name: exercises-gateway
      kind: Gateway
      namespace: exercises
  rules:
    - backendRefs:
        - name: greeter-svc-v1
          port: 80
          weight: 75
        - name: greeter-svc-v2
          port: 80
          weight: 25
